Fix body spacing, add footer to logged in pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,11 +21,23 @@
  //= depend_on_asset "bootstrap/glyphicons-halflings-regular.svg"
 */
 body {
-  padding-top: 100px;
+  background-color: #ffc044;
   /*padding-bottom: 30px;*/
   height: 100%;
 }
 
 html {
   height: 100%;
+}
+
+@media (min-width: 768px) {
+  body {
+    padding-top: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    padding-top: 50px;
+  }
 }
